--- a/.github/workflows/wsl.yml
+++ b/.github/workflows/wsl.yml
@@ -2,9 +2,9 @@ name: wsl
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
 
 jobs:
   cmd-hello-world:
