--- a/.github/workflows/wsl.yml
+++ b/.github/workflows/wsl.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   cmd-hello-world:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     container: linaro/wine-arm64
     steps:
       - name: checkout
