--- a/.github/workflows/wsl.yml
+++ b/.github/workflows/wsl.yml
@@ -14,4 +14,4 @@ jobs:
         uses: actions/checkout@v3
       - run: docker images
       - run: curl https://github.com/pbo-linaro/github-actions-wsl/releases/download/HEAD/wine-rootfs.tar.gz --output wine-rootfs.tar.gz
-      - run: mkdir lol && cd lol && tar xzvf ../wine-rootfs.tar.gz
+      - run: wsl --import wine C:\wine wine-rootfs.tar.gz
