--- a/.github/workflows/wsl.yml
+++ b/.github/workflows/wsl.yml
@@ -19,4 +19,4 @@ jobs:
       - run: curl https://github.com/pbo-linaro/github-actions-wsl/releases/download/HEAD/wine-rootfs.tar.gz --output wine-rootfs.tar.gz
       - run: wsl --import wine C:\wine wine-rootfs.tar.gz
       - run: wsl -l -v
-      - run: wsl -d wine echo lol
+      - run: wsl -d debian echo lol
