--- a/.github/workflows/wsl.yml
+++ b/.github/workflows/wsl.yml
@@ -18,5 +18,7 @@ jobs:
       - run: docker images
       - run: curl https://github.com/pbo-linaro/github-actions-wsl/releases/download/HEAD/wine-rootfs.tar.gz --output wine-rootfs.tar.gz
       - run: wsl --import wine C:\wine wine-rootfs.tar.gz
+      - run: wsl -d wine # start distrib
       - run: wsl -l -v
       - run: wsl -d debian echo lol
+      - run: wsl -d wine echo lol
