--- a/.github/workflows/wsl.yml
+++ b/.github/workflows/wsl.yml
@@ -17,10 +17,10 @@ jobs:
       #    wsl-shell-command: bash -c "cd && bash --noprofile --norc -euo pipefail '{0}'"
       - run: docker images
       - run: curl https://github.com/pbo-linaro/github-actions-wsl/releases/download/HEAD/wine-rootfs.tar.gz --output wine-rootfs.tar.gz
-      - run: wsl --import wine C:\wine wine-rootfs.tar.gz
+      - run: wsl --import wine C:/wine-lol wine-rootfs.tar.gz
         #- run: wsl -d debian # start distrib
         #- run: wsl -d wine # start distrib
       - run: cd c:/ && dir && cd wine && dir
       - run: wsl -l -v
-      - run: wsl -d debian echo lol
+        #- run: wsl -d debian echo lol
       - run: wsl -d wine -u root echo lol
