--- a/.github/workflows/wsl.yml
+++ b/.github/workflows/wsl.yml
@@ -18,7 +18,8 @@ jobs:
       - run: docker images
         #- run: wsl --install -d Ubuntu
       - run: curl https://github.com/pbo-linaro/github-actions-wsl/releases/download/HEAD/wine-rootfs.tar.gz --output wine-rootfs.tar.gz
-      - run: wsl --import wine C:/wine-lol wine-rootfs.tar.gz
+      - run: cmd.exe /c "wsl --import wine C:/wine-lol wine-rootfs.tar.g"
+      - run: cmd.exe /c "wsl --import wine C:/wine-lol wine-rootfs.tar.gz"
         #- run: wsl -d debian # start distrib
         #- run: wsl -d wine # start distrib
       - run: cd c:/wine-lol/rootfs/ && dir
