--- a/.github/workflows/wsl.yml
+++ b/.github/workflows/wsl.yml
@@ -15,11 +15,10 @@ jobs:
       #- uses: Vampire/setup-wsl@v2
       #  with:
       #    wsl-shell-command: bash -c "cd && bash --noprofile --norc -euo pipefail '{0}'"
-      - run: docker images
+      #      - run: docker images
         #- run: wsl --install -d Ubuntu
       - run: curl https://github.com/pbo-linaro/github-actions-wsl/releases/download/HEAD/wine-rootfs.tar.gz --output wine-rootfs.tar.gz
-      - run: cmd.exe /c "wsl --import wine C:/wine-lol wine-rootfs.tar.g"
-      - run: cmd.exe /c "wsl --import wine C:/wine-lol wine-rootfs.tar.gz"
+      - run: wsl --import wine C:/wine-lol wine-rootfs.tar.gz --version 1
         #- run: wsl -d debian # start distrib
         #- run: wsl -d wine # start distrib
       - run: cd c:/wine-lol/rootfs/ && dir
