--- a/.github/workflows/wsl.yml
+++ b/.github/workflows/wsl.yml
@@ -19,7 +19,8 @@ jobs:
         #- run: wsl --install -d Ubuntu
       - run: cd C:/
       - run: curl https://github.com/pbo-linaro/github-actions-wsl/releases/download/HEAD/wine-rootfs.tar.gz --output wine-rootfs.tar.gz
-      - run: start /wait "wsl --import wine C:/wine-lol wine-rootfs.tar.gz --version 1"
+        #- run: start /wait "wsl --import wine C:/wine-lol wine-rootfs.tar.gz --version 1"
+      - run: wsl --import wine C:/wine-lol wine-rootfs.tar.gz --version 1
         #- run: wsl -d debian # start distrib
         #- run: wsl -d wine # start distrib
       - run: cd c:/wine-lol/rootfs/ && dir
