--- a/.github/workflows/wsl.yml
+++ b/.github/workflows/wsl.yml
@@ -18,7 +18,8 @@ jobs:
       #      - run: docker images
         #- run: wsl --install -d Ubuntu
       - run: curl https://github.com/pbo-linaro/github-actions-wsl/releases/download/HEAD/wine-rootfs.tar.gz --output wine-rootfs.tar.gz
-      - run: start /wait wsl --import wine C:/wine-lol wine-rootfs.tar.gz --version 1
+      - run: du -h wine-rootfs.tar.gz
+      - run: start /wait "wsl --import wine C:/wine-lol wine-rootfs.tar.gz --version 1"
         shell: cmd
         #- run: wsl -d debian # start distrib
         #- run: wsl -d wine # start distrib
