--- a/.github/workflows/wsl.yml
+++ b/.github/workflows/wsl.yml
@@ -19,6 +19,7 @@ jobs:
         #- run: wsl --install -d Ubuntu
       - run: Invoke-WebRequest -OutFile wine-rootfs.tar.gz -Uri https://github.com/pbo-linaro/github-actions-wsl/releases/download/HEAD/wine-rootfs.tar.gz
       - run: du -h wine-rootfs.tar.gz
+      - run: gunzip wine-rootfs.tar.gz
       - run: wsl --import wine C:/wine-lol wine-rootfs.tar.gz --version 1
         #- run: wsl -d debian # start distrib
         #- run: wsl -d wine # start distrib
@@ -26,4 +27,4 @@ jobs:
       - run: wsl -l -v
         #- run: wsl -d Ubuntu -u root echo lol
         #- run: wsl -d debian echo lol
-      - run: wsl -d wine -u root echo lol
+      - run: wsl -d wine wine-arm64 cmd.exe /c 'echo hello world'
